--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "generate": "graphql-codegen",
     "check-types": "tsc --pretty"
   },
-  "devDependencies": {
-    "@graphql-codegen/cli": "^3.2.1",
-    "@tanstack/eslint-plugin-query": "^4.24.11"
-  },
-  "dependencies": {
-    "@hookooekoo/configs-tsconfig": "^0.0.14",
-    "@hookooekoo/eslint-config": "^0.1.8",
+  "peerDependencies": {
     "@tanstack/react-query": "^4.24.10",
-    "@types/node": "18.14.5",
     "graphql-request": "^5.2.0",
     "typescript": "4.9.5",
     "zod": "3.20.6"
+  },
+  "dependencies": {
+    "@graphql-codegen/cli": "^3.2.1",
+    "@tanstack/eslint-plugin-query": "^4.24.11",
+    "@hookooekoo/configs-tsconfig": "^0.0.14",
+    "@hookooekoo/eslint-config": "^0.1.8",
+    "@types/node": "18.14.5"
   },
   "eslintConfig": {
     "extends": [
