--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reinvest-app-common",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "private": true,
   "engines": {
     "node": ">=18.0.0",
@@ -15,11 +15,12 @@
   },
   "dependencies": {
     "@graphql-codegen/cli": "^3.2.1",
-    "@tanstack/eslint-plugin-query": "^4.24.11",
     "@hookooekoo/configs-tsconfig": "^0.0.14",
     "@hookooekoo/eslint-config": "^0.1.8",
-    "@types/node": "18.14.5",
+    "@tanstack/eslint-plugin-query": "^4.24.11",
     "@tanstack/react-query": "^4.24.10",
+    "@types/node": "18.14.5",
+    "dayjs": "^1.11.7",
     "graphql-request": "^5.2.0",
     "typescript": "4.9.5",
     "zod": "3.20.6"
