feat: extending internal eslint configuration

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "plugin:@tanstack/eslint-plugin-query/recommended"
+      "plugin:@tanstack/eslint-plugin-query/recommended",
+      "@hookooekoo/eslint-config/next"
     ],
     "plugins": [
       "@tanstack/query"
