--- a/package.json
+++ b/package.json
@@ -8,26 +8,32 @@
     "npm": "please-use-yarn"
   },
   "scripts": {
+    "build": "tsup",
     "lint": "yarn eslint",
     "lint:fix": "yarn lint --fix",
     "generate": "graphql-codegen",
     "check-types": "tsc --pretty"
   },
   "dependencies": {
-    "@graphql-codegen/cli": "^3.2.1",
+    "@graphql-codegen/cli": "^3.2.2",
     "@hookooekoo/configs-tsconfig": "^0.0.14",
     "@hookooekoo/eslint-config": "^0.1.8",
-    "@tanstack/eslint-plugin-query": "^4.24.11",
-    "@tanstack/react-query": "^4.24.10",
-    "@types/node": "18.14.5",
+    "@tanstack/eslint-plugin-query": "^4.27.0",
+    "@tanstack/react-query": "^4.28.0",
+    "@types/node": "18.15.5",
+    "@types/react": "^18.0.28",
     "dayjs": "^1.11.7",
     "graphql-request": "^5.2.0",
+    "lefthook": "^1.3.7",
+    "react": "^18.2.0",
+    "tsup": "^6.7.0",
     "typescript": "4.9.5",
-    "zod": "3.20.6"
+    "zod": "3.21.4"
   },
   "eslintConfig": {
     "extends": [
-      "plugin:@tanstack/eslint-plugin-query/recommended"
+      "plugin:@tanstack/eslint-plugin-query/recommended",
+      "@hookooekoo/eslint-config/next"
     ],
     "plugins": [
       "@tanstack/query"
