--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 jobs:
-  build-check-deploy:
+  check-code:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
