--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "@hookooekoo/configs-tsconfig": "^0.0.14",
     "@hookooekoo/eslint-config": "^0.1.8",
     "@tanstack/eslint-plugin-query": "^4.27.0",
-    "@tanstack/react-query": "^4.28.0",
-    "@types/node": "18.15.5",
-    "@types/react": "^18.0.28",
-    "dayjs": "^1.11.7",
-    "graphql-request": "^5.2.0",
     "lefthook": "^1.3.7",
-    "react": "^18.2.0",
     "tsup": "^6.7.0",
     "typescript": "4.9.5",
-    "zod": "3.21.4"
+    "dayjs": "^1.11.7",
+    "graphql-request": "^5.2.0",
+    "zod": "3.21.4",
+    "@types/node": "18.15.5",
+    "@types/react": "^18.0.28",
+    "react": "^18.2.0",
+    "@tanstack/react-query": "^4.28.0"
   },
   "eslintConfig": {
     "extends": [
