--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@hookooekoo/eslint-config": "^0.1.8",
     "@tanstack/eslint-plugin-query": "^4.27.0",
     "@tanstack/react-query": "^4.28.0",
+    "@types/google-maps": "^3.2.3",
     "@types/node": "18.15.5",
     "@types/react": "^18.0.28",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
