--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@hookooekoo/configs-tsconfig": "0.0.16",
     "@hookooekoo/eslint-config": "0.2.1",
     "@tanstack/eslint-plugin-query": "^4.27.0",
-    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query": "4.29.1",
     "@types/google-maps": "^3.2.3",
     "@types/node": "18.15.5",
     "@types/react": "18.0.31",
