--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@hookooekoo/eslint-config": "0.2.2",
     "@tanstack/eslint-plugin-query": "^4.29.4",
     "@tanstack/react-query": "4.29.7",
-    "@types/google-maps": "^3.2.3",
+    "@types/google.maps": "^3.53.5",
     "@types/node": "20.1.5",
     "@types/react": "18.2.6",
     "axios": "^1.4.0",
